# zkwallet

./: .gitignore  README.md  pubspec.yaml
assets/: index.html
backend/: Cargo.toml
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
lib/chains/: config.dart
lib/chains/solana/: solana_client.dart
lib/models/finance/: amount.freezed.dart  currency.dart  currency.freezed.dart  token.dart  token.g.dart
lib/models/wallet/: wallet_types copy.dart  wallet_types.dart  wallet_types.g.dart  wallets.dart  wallets.g.dart  wallets_group.dart  wallets_group.g.dart  wallets_group_read.dart  wallets_group_read.g.dart
lib/screens/home/main/: binding.dart  logic.dart  screen.dart
lib/screens/home/receive/: receive.dart
lib/screens/home/send/: send.dart
lib/screens/home/send/widgets/: gas_select.dart
lib/screens/home/wallet/: binding.dart  logic.dart  screen.dart  test_sol.dart
lib/screens/home/wallet/pages/select_network/: screen.dart
lib/screens/onboarding/: binding.dart  contents.dart  logic.dart  screen.dart
lib/screens/profile/: profile.dart
lib/screens/profile/pages/: bottom_add_bar.dart  management.dart  wallet_management.dart  wallet_types.dart
lib/screens/profile/widgets/: decoration.dart
lib/screens/splash/: logic.dart  screen.dart
lib/screens/test/: test.dart
lib/screens/wallet/create_import/: binding.dart  logic.dart  screen.dart
lib/screens/wallet/create_import/widgets/: create.dart  import.dart
lib/utils/api/: api_resp.dart
lib/utils/config/: config.dart  images.dart  styles.dart  urls.dart
lib/utils/controllers/: app_controller.dart
lib/utils/encryption/: general.dart
lib/utils/extension/: custom_ext.dart
lib/utils/log/: logger.dart
lib/utils/rand/: rand_string.dart
lib/utils/route/: app_navigator.dart  app_pages.dart  app_routes.dart  app_view.dart
lib/utils/state/: data_sp.dart  sp_util.dart
lib/utils/state/wallet_type.dart/: wallet_type.dart
lib/utils/storage/: general.dart
lib/utils/string/: string_utils.dart
lib/widgets/: selectDown.dart  shadow.dart
lib/widgets/agreements/: create_wallet.dart  encrypt_mnemonics.dart
lib/widgets/assets/: backgroud_icon.dart  coin_icon.dart
lib/widgets/buttons/: bg_button.dart  line_button.dart
lib/widgets/confirm/: confirm_text_pin.dart  local_password.dart  main_button.dart  prompt_dialog.dart
lib/widgets/input/: boarder_input.dart
lib/widgets/payment/: confirmation.dart  prettyjson.dart  verify_password.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
native/: Cargo.toml  expand.txt
native/ark-circom/: Cargo.toml
native/crypto-wallet-gen/: Cargo.toml
native/crypto-wallet-gen/src/: bip32.rs  lib.rs  random.rs
native/crypto-wallet-gen/src/mnemonics/: bip39.rs  mod.rs  scrypt.rs
native/crypto-wallet-gen/src/wallets/: mod.rs
native/hdpath/: Cargo.toml
native/sp-core/: Cargo.toml
native/sp-core/src/: bls.rs  crypto.rs  ecdsa.rs  ed25519.rs  hashing.rs  hexdisplay.rs  lib.rs  sr25519.rs  testing.rs  traits.rs
native/sp-core/src/offchain/: mod.rs  storage.rs  testing.rs
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
native/src/chains/: mod.rs
native/src/chains/sol/: mod.rs
native/src/models/: address.rs  method.rs  mod.rs  wallet_create.rs
native/src/utils/: mod.rs  pubkey.rs
native/src/utils/bip44/: coins.rs  keypair.rs  mod.rs  path.rs
native/src/utils/sign/: error.rs  mod.rs
native/src/wallet/: mnemonics.rs
native/wallet_creation/: Cargo.toml
native/wallet_creation/src/: lib.rs
vara_sdk/: pubspec.yaml
vara_sdk/js_api/: package.json  tsconfig.json
vara_sdk/lib/: polkawallet_sdk.dart
vara_sdk/lib/api/: api.dart  apiAccount.dart  apiAssets.dart  apiBridge.dart  apiGov.dart  apiGov2.dart  apiKeyring.dart  apiParachain.dart  apiRecovery.dart  apiSetting.dart  apiStaking.dart  apiTx.dart  apiUOS.dart  apiWalletConnect.dart
vara_sdk/lib/api/types/gov/: proposalInfoData.dart
vara_sdk/lib/api/types/parachain/: auctionData.dart
vara_sdk/lib/plugin/: index.dart
vara_sdk/lib/plugin/store/: balances.dart
vara_sdk/lib/service/: account.dart  assets.dart  bridge.dart  bridgeRunner.dart  gov.dart  gov2.dart  index.dart  keyring.dart  parachain.dart  recovery.dart  setting.dart  staking.dart  tx.dart  uos.dart  walletConnect.dart  webViewRunner.dart
vara_sdk/lib/storage/: keyring.dart
vara_sdk/lib/storage/types/: ethWalletData.dart
vara_sdk/lib/webviewWithExtension/: webviewWithExtension.dart
