[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

# [workspace]
# members = [".", "sp-core"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"

# zk deps
ark-bn254 = "0.4.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git", features = [
    "circom-2",
    # "wasm",
] }
ark-ff = "0.4.1"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
color-eyre = "0.6.2"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasmer = { version = "2.3.0" }
tiny-bip39 = "1.0.0"

# wallet
sp-core = { path = "sp-core" }
bip39 = "2.0.0"
data-encoding = "2.4.0"
