[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[workspace]
members = [".", "wallet_creation", "hdpath", "crypto-wallet-gen"]


[workspace.dependencies]
anyhow = "1"
serde = { version = "1.0.188" }
tiny-bip39 = "1.0.0"
libsecp256k1 = "0.7.1"

[dependencies]
wallet_creation = { path = "./wallet_creation" }
anyhow = "1"
flutter_rust_bridge = "1"

# zk deps
ark-bn254 = "0.4.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git", features = [
    "circom-2",
    # "wasm",
] }
ark-ff = "0.4.1"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
color-eyre = "0.6.2"
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
wasmer = { version = "2.3.0" }
tiny-bip39 = "1.0.0"

# wallet
sp-core = { path = "sp-core" }
bip39 = "2.0.0"
data-encoding = "2.4.0"
derivation-path = "0.2.0"
thiserror = "1.0.39"
uriparse = "0.6.4"
qstring = "0.7.2"
