[package]
name = "wallet_creation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }

num-bigint = "0.2.3"
hkdf = "0.12.3"
sha2 = "0.10.5"
num-traits = "0.2"

tiny-bip39 = { workspace = true }
crypto-wallet-gen = { path = "../crypto-wallet-gen" }
